2008-12-08	Felix Bruns <felixbruns@web.de>

	* Fixed user.getRecommendedEvents
	* Added user.getRecommendedArtists
	* Added group.getMembers
	* Added CHANGELOG


2008-12-07	Felix Bruns <felixbruns@web.de>

	* Fixed several bugs
	* Added SqliteCache class
	* Added DiskCache class
	* Added support for caching
	* Added LICENSE and README


2008-12-06	Felix Bruns <felixbruns@web.de>

	* Fixed some bugs
	* Added Error class (Exception)
	* Added a lot of documentation comments


2008-12-03	Felix Bruns <felixbruns@web.de>

	* Initial version