@@ -65,7 +65,7 @@ class Caller {
 		$this->cache = new DiskCache();
 
 		curl_setopt($this->curl, CURLOPT_RETURNTRANSFER, 1);
-		curl_setopt($this->curl, CURLOPT_USERAGENT, phpversion());
+		curl_setopt($this->curl, CURLOPT_USERAGENT, "PHP last.fm API (PHP/" . phpversion() . ")");
 		curl_setopt($this->curl, CURLOPT_HEADERFUNCTION, array(&$this, 'header'));
 	}
 
