@@ -4,6 +4,8 @@
 	* Added user.getRecommendedArtists
 	* Added group.getMembers
 	* Added CHANGELOG
+	* Added lastfm.api.php (autoloading classes)
+	* Changed User-Agent to "PHP last.fm API (PHP/<version>)"
 
 
 2008-12-07	Felix Bruns <felixbruns@web.de>
